txs auto checkin

--- a/bewerbung.tex
+++ b/bewerbung.tex
@@ -43,15 +43,15 @@
 %\SetzeSprache{Schweiz}          % optional
 
 % Eigene Daten festgelegt.
-\VollerName{Eva Mustermann}
-\AbsenderStrasse{Musterweg 42}
-\AbsenderPLZOrt{12345 Berlin}
+\VollerName{Philipp Harke}
+\AbsenderStrasse{Unterstraße 35}
+\AbsenderPLZOrt{44892 Bochum}
 \AbsenderLand{Deutschland}           % optional
 % Als erstes Argument kann man beim Telefon eine Angabe
 % davor angeben. Der Wert darf auch leer sein.
 % Bei Telefonnummer ggf. Laenderkennung ergaenzen, wenn
 % die Telefonnummer nicht im Land des Empfaengers ist.
-\bwTelefon{Tel.:}{0170 567890}       % optional
+\bwTelefon{Tel.:}{01577 9699992}       % optional
 %\bwTelefon{\Telefon}{+49 170 567890}
 % Als erstes Argument kann man bei der E-Mail eine Angabe
 % davor angeben (z.B. "E-Mail:". Der Wert darf auch leer sein.
@@ -59,22 +59,22 @@
 % mit der die Mailadresse dargestellt werden soll.
 % Standard ist "black"  als Farbe. Beispiel: \EMail[orange]{...}{...}
 % Achtung: Die Farbe wird fuer alle Links benutzt, damit es einheitlich aussieht.
-\bwEMail[Blue]{}{eva.mustermann@musterstadt.de}         % optional
+\bwEMail[Blue]{}{pharke95@gmail.com}         % optional
 %\bwEMail{\Email}{eva.mustermann@musterstadt.de}         % optional
-\Ort{Berlin}
+\Ort{Bochum}
 \Datum{\HeutigerTag}
-\Geburtstag{1. Januar 1985}
-\Geburtsort{Berlin}
+\Geburtstag{22. Mai 1995}
+\Geburtsort{Borken}
 % Der Ausbildungsgrad und die Details sind optional.
 % Leer lassen oder auskommentieren, wenn nichts angezeigt werden soll.
 \Details{ledig, ortsungebunden} % verheiratet, 2 Kinder, etc.
-\Ausbildungsgrad{Promovierte Veterinärmedizinerin}    % optional
+\Ausbildungsgrad{B. Eng. Elektrotechnik}    % optional
 % Optionale Profile für verschiedene Seiten (z.B. Xing, Linkedin, Github).
 % Alle werden nur auf der persoenlichen Seite angezeigt,
 % nicht im Anschreiben.
-\XingProfil{Eva\_Mustermann}
-\LinkedInProfil{evamustermann}
-\GitHubProfil{evamustermann}
+%\XingProfil{Eva\_Mustermann}
+%\LinkedInProfil{evamustermann}
+%\GitHubProfil{evamustermann}
 
 % Die Unterschrift sollte als Bilddatei vorliegen.
 % Leer lassen oder auskommentieren, wenn keine Signatur eingebunden
@@ -88,7 +88,7 @@
 % der "Meine Seite"-Seite angezeigt werden soll.
 % Als Option gibt man die Hoehe des Bildes an. Eine Hoehe von 10.5 cm
 % ist das groesste, was noch auf die Seite passt.
-\BewerberFoto[6cm]{foto-bewerber.jpg}                 % optional
+\BewerberFoto[6cm]{Bild_1.jpg}                 % optional
 
 % Adressat festlegen
 % Die Abteilung und der Vorname sind optional und koennen leer
