txs auto checkin

--- a/bewerbung.tex
+++ b/bewerbung.tex
@@ -27,7 +27,7 @@
 % Als Standard wird hier TeX Gyre Pagella benutzt (Paket "tex-gyre").
 % Als optionales Argument kann eine neue Schriftgroesse
 % (abweichend von den 12pt von oben) angegeben werden.
-\SetzeSchrift[12pt]{}{Source Sans Pro}          % optional
+\SetzeSchrift[12pt]{sourcesanspro}{Source Sans Pro}          % optional
 
 % Umschalten auf serifenlose Schrift. Wenn gewuenscht, einkommentieren.
 % Achtung: Nicht jede serifenlose Schrift kommt mit den Kapitaelchen in
